# py-pwa-launcher

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: package.yml  pypi-publish.yml
pwa_launcher/: __init__.py  open_pwa.py  pwa_support.py
pwa_launcher/get_chromium/: __init__.py  find_chromium.py  install_chromium.py
scripts/: tag_release.ps1  tag_release.sh
tests/: __init__.py  test_find_chromium.py  test_get_chromium.py  test_install_chromium.py  test_open_pwa.py  test_pwa_support.py
